# sales-rig-task-pipeline

./: .dockerignore  .gitignore  CONFIG_EDITOR_FINAL.md  CONFIG_EDITOR_STATUS.md  CONFIG_PHASE3_COMPLETE.md  CONFIG_PROGRESS.md  CONFIG_SCHEMA_DESIGN.md  Cargo.toml  EMBEDDED_EXTENSION.md  PHASE3_100_PERCENT_COMPLETE.md  README.md  RESEARCH_1.md  TASK_PLAN.md  TASK_PLAN_2.md  TASK_PLAN_251127.md  TASK_PLAN_251128.md  TASK_PLAN_ARTIFACT_GENERATOR.md  TASK_PLAN_CONFIG_MODERNIZATION.md  TASK_PLAN_EDITOR_DETAILS_251204.md  TASK_PLAN_LLM_CHAT.md  TASK_PLAN_LLM_TOOLS_PERSONAS.md  TASK_PLAN_PRD_VIEW.md  docker-compose.yml  setup-ollama.sh  test_prd.md  test_vec_search.rs
.cargo/: config.toml
rigger_cli/: Cargo.toml  KNOWLEDGE_GRAPH.md  README.md  TASK_PLAN_INTERACTIVE_GENERATION.md  TASK_PLAN_PRD_PROCESSING.md  build.rs
rigger_cli/docs/: INTERACTIVE_PRD_GENERATION_DESIGN.md  TUI_BEST_PRACTICES.md
rigger_cli/examples/: sidecar_client.rs  test_grpc_client.rs
rigger_cli/ide_configs/: README.md  cursor_mcp_config.json  windsurf_config.json
rigger_cli/proto/: rigger.proto
rigger_cli/src/: constants.rs  lib.rs  main.rs
rigger_cli/src/adapters/: arboard_clipboard_adapter.rs  mod.rs
rigger_cli/src/commands/: artifacts.rs  config.rs  do_task.rs  grpc_server.rs  init.rs  list.rs  mod.rs  parse.rs  server.rs  tui.rs  tui.rs.bak  tui.rs.bak10  tui.rs.bak2  tui.rs.bak4  tui.rs.bak5  tui.rs.bak7  tui.rs.bak8  tui.rs.bak9
rigger_cli/src/display/: mod.rs  task_table.rs
rigger_cli/src/ports/: clipboard_port.rs  mod.rs
rigger_cli/src/services/: mod.rs  task_formatter.rs
rigger_cli/src/ui/: config_editor.rs  mod.rs
rigger_cli/tests/: integration_persona_database.rs  integration_prd_workflow.rs
task_manager/: Cargo.toml  README.md
task_manager/src/: lib.rs
task_manager/src/adapters/: embedded_sqlite_vec.rs  ignore_aware_scanner.rs  in_memory_task_adapter.rs  mod.rs  sqlite_agent_tool_adapter.rs  sqlite_artifact_adapter.rs  sqlite_persona_adapter.rs  sqlite_project_adapter.rs  sqlite_task_adapter.rs
task_manager/src/domain/: agent_tool.rs  artifact.rs  checklist_item.rs  comprehension_test.rs  enhancement.rs  mod.rs  persona.rs  prd.rs  project.rs  project_context.rs  scan_config.rs  sort_order.rs  task.rs  task_revision.rs  task_sort_key.rs  task_status.rs
task_manager/src/domain/services/: complexity_scorer.rs  dependency_graph.rs  mod.rs  triage_service.rs
task_manager/src/infrastructure/: mod.rs
task_manager/src/infrastructure/dtos/: extracted_action_item.rs  mod.rs
task_manager/src/infrastructure/llm_parsers/: action_item_parser.rs  mod.rs
task_manager/src/infrastructure/markdown_parsers/: mod.rs  prd_parser.rs
task_manager/src/infrastructure/schemas/: action_item_schema.rs  comprehension_test_schema.rs  enhancement_schema.rs  mod.rs
task_manager/src/ports/: agent_tool_repository_port.rs  artifact_repository_port.rs  directory_scanner_port.rs  mod.rs  persona_repository_port.rs  project_repository_port.rs  task_repository_port.rs
task_manager/src/use_cases/: manage_task.rs  mod.rs
task_orchestrator/: Cargo.toml  README.md
task_orchestrator/src/: lib.rs
task_orchestrator/src/adapters/: memory_metrics_collector.rs  mlx_subprocess_adapter.rs  mod.rs  ollama_comprehension_test_adapter.rs  ollama_enhancement_adapter.rs  provider_factory.rs  reqwest_web_crawler.rs  rig_agent_adapter.rs  rig_embedding_adapter.rs  rig_prd_parser_adapter.rs  rig_task_decomposition_adapter.rs  rig_vision_adapter.rs  sqlite_metrics_collector.rs
task_orchestrator/src/architecture/: describe_architecture.rs  mod.rs
task_orchestrator/src/domain/: crawl_result.rs  mod.rs  model_role.rs  performance_metrics.rs
task_orchestrator/src/graph/: assemble_orchestrator_flow.rs  build_graph.rs  build_graph_flow.rs  flow_integration.rs  mod.rs  orchestrator_graph.rs  state.rs
task_orchestrator/src/graph/flow_shims/: check_test_result_task_shim.rs  comprehension_test_task_shim.rs  end_task.rs  enhancement_task_shim.rs  mod.rs  semantic_router_task_shim.rs  (+1 more)
task_orchestrator/src/infrastructure/: config.rs  mod.rs  sqlite_session_storage.rs
task_orchestrator/src/ports/: comprehension_test_port.rs  embedding_port.rs  llm_agent_port.rs  metrics_collector_port.rs  mod.rs  prd_parser_port.rs  task_decomposition_port.rs  task_enhancement_port.rs  vision_port.rs  web_crawler_port.rs
task_orchestrator/src/services/: artifact_generator_service.rs  artifact_service.rs  mod.rs  vision_service.rs
task_orchestrator/src/tools/: file_system_tool.rs  get_prd_summary_tool.rs  get_task_details_tool.rs  list_project_artifacts_tool.rs  mod.rs  search_artifacts_tool.rs  search_tasks_tool.rs
task_orchestrator/src/use_cases/: flow_runner.rs  mod.rs  orchestrator.rs  run_task_with_flow.rs  run_task_with_flow_disabled.rs  run_task_with_ollama.rs  run_task_with_ports.rs  task_graph_runner.rs
task_orchestrator/tests/: integration_end_to_end_flow.rs  integration_provider_swap.rs  integration_streaming_prd_generation.rs  integration_task_decomposition.rs
transcript_extractor/: Cargo.toml  README.md
transcript_extractor/src/: lib.rs
transcript_extractor/src/adapters/: mod.rs  ollama_adapter.rs
transcript_extractor/src/domain/: action_item.rs  mod.rs  transcript_analysis.rs
transcript_extractor/src/ports/: mod.rs  transcript_extractor_port.rs
transcript_processor/: Cargo.toml  Cargo.toml.bak  Cargo.toml.bak2  Cargo.toml.bak3  README.md  build.rs
transcript_processor/src/: lib.rs  main.rs
transcript_processor/src/adapters/: candle_adapter.rs  in_memory_task_adapter.rs  mistral_adapter.rs  mistralrs_embed_adapter.rs  mod.rs  ollama_adapter.rs  rig_adapter.rs
transcript_processor/src/application/: mod.rs
transcript_processor/src/domain/: action_item.rs  checklist_item.rs  mod.rs  sort_order.rs  task.rs  task_revision.rs  task_sort_key.rs  task_status.rs  transcript_analysis.rs
transcript_processor/tests/: integration_candle_complex_conversation.rs  integration_candle_five_person_conversation.rs  integration_ollama_complex_conversation.rs  integration_ollama_five_person_conversation.rs
(+46 files in other folders)
